# klio-01

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
api-gateway/: Dockerfile  pyproject.toml
api-gateway/app/: circuit_breaker.py  config.py  main.py  proxy.py  registry_client.py
businesslogic-service/: Dockerfile  pyproject.toml
businesslogic-service/app/: config.py  events.py  main.py  routes.py
cids-service/: Dockerfile  pyproject.toml
cids-service/app/: config.py  crud.py  database.py  main.py  models.py  routes.py  schemas.py
config-server/: Dockerfile
config-server/app/: main.py
config-server/app/configs/: api-gateway.json  businesslogic-service.json  cids-service.json  licenceplate-detector.json  licenceplate-validator.json  orchestrator-service.json  vin-detector.json  vin-validator.json
dbvalidator-service/: Dockerfile  pyproject.toml
dbvalidator-service/app/: config.py  crud.py  events.py
doc/: architecture.md  plan.md  task.md
licenceplate-detector/: Dockerfile  pyproject.toml
licenceplate-detector/app/: config.py  detector.py  events.py
licenceplate-validator/: Dockerfile  pyproject.toml
licenceplate-validator/app/: config.py  crud.py  events.py  main.py  models.py  seed.py
orchestrator-service/: Dockerfile  pyproject.toml
orchestrator-service/app/: config.py  crud.py  events.py  main.py  models.py  routes.py
service-registry/: Dockerfile  pyproject.toml
service-registry/app/: main.py  registry.py
src/api-gateway/: Dockerfile
src/api-gateway/app/: circuit_breaker.py  config.py  main.py  registry_client.py
src/config-server/: Dockerfile  pyproject.toml
src/config-server/app/configs/: dbvalidator-service.json  licenceplate-detector.json
src/dbvalidator-service/app/: main.py  models.py  seed.py
src/licenceplate-detector/: Dockerfile
src/licenceplate-detector/app/: events.py  main.py
src/orchestrator-service/app/: config.py  events.py
src/service-registry/: Dockerfile
src/service-registry/app/: registry.py
src/uuid-service/: Dockerfile  pyproject.toml
src/uuid-service/app/: main.py
src/vin-detector/: pyproject.toml
src/vin-detector/app/: config.py  detector.py  events.py
uuid-service/app/: config.py  routes.py
vin-detector/: Dockerfile  pyproject.toml
vin-detector/app/: config.py  detector.py  events.py  main.py
vin-validator/: Dockerfile  pyproject.toml
vin-validator/app/: config.py  crud.py  database.py  events.py  main.py  models.py  seed.py
web-app/: Dockerfile  pyproject.toml
web-app/app/: config.py  main.py
web-app/app/templates/: index.html  results.html
