[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = "API Gateway — klio-01"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.29"}
httpx = "^0.27"
slowapi = "^0.1.9"
pydantic-settings = "^2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
