[tool.poetry]
name = "vin-validator"
version = "0.1.0"
description = "VIN Validator Service — klio-01"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.29"}
httpx = "^0.27"
sqlalchemy = "^2.0"
aiosqlite = "^0.20"
aio-pika = "^9.4"
pydantic = "^2.7"
pydantic-settings = "^2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
